[package]
name = "json-writer-simpler"
version = "0.3.0"
edition = "2021"
description = "Simple and fast crate for writing JSON to a string without creating intermediate objects (don't escape forward slashes)"
license = "Unlicense"
categories = [ "encoding" ]
repository = "https://github.com/ipamo/json-writer-simpler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.6"
ryu = "1.0.13"
